# MDMAI

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  ARCHITECTURE_DESIGN.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  CODE_REVIEW_FIXES_SUMMARY.md  CONTEXT_MANAGEMENT_ARCHITECTURE.md  DEMO_README.md  Dockerfile  EBOOK_INTEGRATION_SUMMARY.md  Makefile  Makefile.pyoxidizer  PHASE_3_5_ENHANCEMENTS.md  PYTHON_MODERNIZATION.md  README.md  SVELTEKIT_MIGRATION.md  TASK_24_6_SUMMARY.md  TASK_25_5_ARCHITECTURE.md  TASK_25_5_IMPLEMENTATION_PLAN.md  TROUBLESHOOTING.md  USAGE_TRACKING_PERSISTENCE_DESIGN.md  USAGE_TRACKING_SYSTEM_DOCUMENTATION.md  build.sh  code_review_fixes.md  code_review_fixes_summary.md  design.md  dev_setup.sh  performance_improvements.md  pyoxidizer.bzl  pyproject.toml  pytest.ini  quick_setup.sh  requirements-cpu.txt  requirements-deploy.txt  requirements-test.txt  requirements.md  requirements.txt  requirements_ebook.txt  (+16 more)
.github/: copilot-pr-review.yml  disabled-workflows.md
.github/workflows/: build-installers.yml  dependency-tests.yml.disabled
config/: logging_config.py  pricing.json  pricing.yaml  settings.py  voice_synthesis.yaml
data/chromadb/: chroma.sqlite3
deploy/backup/: backup_manager.py  restore_manager.py
deploy/config/: .env.template  config.yaml.template  docker-compose.yaml.template  nginx.conf  systemd.service.template
deploy/docs/: BACKUP.md  DEPLOYMENT.md  MIGRATION.md
deploy/migration/: data_migrator.py  migrate.py  rollback.py  schema_migrator.py  version_manager.py
deploy/scripts/: check_requirements.py  configure.py  get_version.py  install.ps1  install.sh  setup_environment.py
deploy/utils/: __init__.py  platform_utils.py
desktop/: DEPLOYMENT_GUIDE.md  FIXES_SUMMARY.md  INSTALLER_README.md  README.md  SETUP.md  USER_GUIDE.md  build_installer.py  demo_fixes.py  generate-update-manifest.py
desktop/backend/: build.sh  mcp_stdio_wrapper.py  websocket_adapter.py
desktop/frontend/: DATA_MANAGEMENT_README.md  INTEGRATION_EXAMPLE.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
desktop/frontend/src-tauri/: Cargo.toml  tauri.conf.json
desktop/frontend/src-tauri/capabilities/: main.json
desktop/frontend/src-tauri/icons/: icon.icns
desktop/frontend/src-tauri/src/: data_manager_commands.rs  ipc.rs  lib.rs  main.rs  main_v2.rs  mcp_bridge.rs  mcp_bridge_v2.rs  native_features.rs  performance_commands.rs  process_manager.rs  resource_manager.rs  secure_mcp_bridge.rs  security_commands.rs
desktop/frontend/src-tauri/src/data_manager/: backup.rs  cache.rs  encryption.rs  file_manager.rs  integrity.rs  migration.rs  mod.rs  models.rs  storage.rs
desktop/frontend/src-tauri/src/data_manager/migrations/: 001_initial_schema.rollback.sql  001_initial_schema.sql
desktop/frontend/src-tauri/src/performance/: benchmarking.rs  ipc_optimizer.rs  lazy_loader.rs  memory_manager.rs  metrics.rs  mod.rs  resource_monitor.rs  startup_optimizer.rs
desktop/frontend/src-tauri/src/security/: audit.rs  crypto.rs  keychain.rs  mod.rs  monitoring.rs  permissions.rs  sandbox.rs  validation.rs
desktop/frontend/src-tauri/src/tests/: README.md  data_manager_commands_tests.rs  error_handling_tests.rs  mcp_bridge_tests.rs  performance_commands_tests.rs  process_manager_comprehensive_tests.rs  resource_manager_comprehensive_tests.rs  security_commands_tests.rs
desktop/frontend/src-tauri/tests/: ipc_integration.rs
desktop/tools/: generate_icons.py
docs/: CREDENTIAL_MANAGEMENT_GUIDE.md  ENHANCED_USAGE_TRACKING.md  MCP_TOOLS_SPEC.md  OLLAMA_EMBEDDINGS.md  PYOXIDIZER_PACKAGING.md  TASK_25_3_IMPLEMENTATION_PLAN.md  TASK_25_4_IMPLEMENTATION_PLAN.md  TAURI_PYOXIDIZER_INTEGRATION.md  cost_optimization_architecture.md  credential_management_security_guide.md  desktop-architecture-recommendation.md  mcp_provider_router_protocol.md  tauri-implementation-guide.md
docs/admin/: README.md
docs/ai_providers/: README.md
docs/api/: README.md  campaign_management.md  character_generation.md  personality_management.md  search_tools.md  session_management.md  (+1 more)
examples/: cost_optimization_demo.py  credential_management_examples.py  enhanced_usage_tracking_demo.py  usage_tracking_example.py
frontend/: IMPLEMENTATION_SUMMARY.md  O1_LRU_PERFORMANCE_FIX.md  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/src-tauri/: Cargo.toml  README.md  tauri.conf.json
frontend/src-tauri/src/: data_manager_commands.rs  lib.rs  main.rs  native_features.rs  syntax_check.rs  tests.rs
frontend/src-tauri/src/data_manager/: backup.rs  cache.rs  encryption.rs  file_manager.rs  integrity.rs  mod.rs  salt_storage.rs
scripts/: build_pyoxidizer.py  install_pyoxidizer.ps1  install_pyoxidizer.sh  test_pyoxidizer_stdio.py  verify_voice.py
src/: __init__.py  bridge_server.py  content_enrichment.py  ebook_extraction.py  main.py  main_secured.py  mcp_integration_example.py  mcp_server.py  oxidizer_main.py
tests/: README.md  conftest.py  run_dependency_tests.py  run_tests.py  test_ai_providers.py  test_aiohttp_simple.py  test_basic.py  test_bridge_complete.py  test_campaign.py  test_campaign_management.py  test_character_generation.py  test_context_management.py  test_database_integration.py  test_dependencies.sh  test_dependency_regression.py  test_dependency_updates.py  test_enhanced_usage_tracker.py  test_error_handling.py  test_genre_generation.py  test_integration.py  test_integration_all.py  test_logging_system.py  test_mcp_communication.py  test_mcp_tools.py  test_ollama_model_selection.py  test_pdf_processing.py  test_pdf_processing_improvements.py  test_performance.py  test_personality.py  test_provider_router_chaos_engineering.py  test_provider_router_comprehensive.py  test_provider_router_failure_scenarios.py  test_provider_router_integration.py  test_provider_router_load_testing.py  test_provider_router_mocks.py  test_provider_router_performance.py  test_provider_router_property_based.py  test_provider_router_unit.py  test_result_pattern.py  test_runner.py  (+8 more)
(+480 files in other folders)
