[package]
name = "mdmai-desktop"
version = "0.1.0"
description = "MDMAI Desktop Application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all", "shell-open"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"
argon2 = "0.5"
rusqlite = { version = "0.30", features = ["bundled"] }
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"
walkdir = "2.4"
tempfile = "3.8"
log = "0.4"
env_logger = "0.10"
base64 = "0.21"
rand = "0.8"
futures = "0.3"
constant_time_eq = "0.3"
libc = "0.2"
bincode = "1.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]