[package]
name = "ttrpg-assistant"
version = "1.0.0"
description = "TTRPG Assistant Desktop Application"
authors = ["TTRPG Assistant Team"]
license = "MIT"
repository = "https://github.com/Raudbjorn/MDMAI"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.1"
tauri-plugin-dialog = "2.1"
tauri-plugin-fs = "2.1"
tauri-plugin-http = "2.1"
tauri-plugin-notification = "2.1"
tauri-plugin-process = "2.1"
tauri-plugin-shell = "2.1"
tauri-plugin-updater = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "ttrpg-assistant"
path = "src/main.rs"
